--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "cloneable_errors"
 description = "A library similar to anyhow, that allows the errors to be cloned, shared, cached and even sent over the network"
-version = "1.0.0"
+version = "1.0.1"
 repository = "https://github.com/mini-bomba/cloneable_errors"
 license = "MIT"
 edition = "2021"
@@ -15,3 +15,6 @@ pedantic = { level = "warn", priority = -1 }
 todo = "warn"
 # personal code style preferences
 module_name_repetitions = "allow"
+
+[package.metadata.docs.rs]
+all-features = true
