--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,10 +9,14 @@ edition = "2021"
 [features]
 # allows the errors to contain arbitrary "extension" properties
 extensions = []
+anyhow = ["dep:anyhow"]
+bincode = ["dep:bincode"]
+serde = ["dep:serde"]
 
 [dependencies]
 anyhow = {version = "1.0.79", optional = true}
-serde = {version = "1.0.215", features = ["derive", "rc"], optional = true}
+bincode = { version = "2.0.1", default-features = false, features = ["derive", "alloc"], optional = true }
+serde = {version = "1.0.215", default-features = false, features = ["derive", "rc", "alloc"], optional = true}
 
 [lints.clippy]
 pedantic = { level = "warn", priority = -1 }
